{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 88,
  "lineage": "caebc4a7-b8af-30ef-0086-459c3f530d72",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ec2_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-005c23718a584fe9c",
            "association_id": "eipassoc-00aa2e8c24131dae7",
            "domain": "vpc",
            "id": "eipalloc-005c23718a584fe9c",
            "instance": "i-0eee89cbb277a2bf4",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-006f5682264cf7a4b",
            "private_dns": "ip-172-16-10-100.eu-central-1.compute.internal",
            "private_ip": "172.16.10.100",
            "public_dns": "ec2-3-124-254-165.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.124.254.165",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.ec2",
            "aws_key_pair.root",
            "aws_network_interface.nic",
            "aws_security_group.allow_ssh",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087924c9e0410af37",
            "arn": "arn:aws:ec2:eu-central-1:584871003262:instance/i-0eee89cbb277a2bf4",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eee89cbb277a2bf4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.micro",
            "ipv6_address_count": 0,
            "key_name": "termite-cloud-infrastructure-root-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-006f5682264cf7a4b"
              }
            ],
            "primary_network_interface_id": "eni-006f5682264cf7a4b",
            "private_dns": "ip-172-16-10-100.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.10.100",
            "public_ip": "3.124.254.165",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "termite-cloud-infrastructure"
                },
                "throughput": 125,
                "volume_id": "vol-00e1301324bf5f8d8",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a3b7e2bbd62f056d",
            "tags": {
              "Name": "termite-cloud-infrastructure"
            },
            "tags_all": {
              "Name": "termite-cloud-infrastructure"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09ff6131adb35a694"
            ]
          },
          "dependencies": [
            "aws_key_pair.root",
            "aws_network_interface.nic",
            "aws_security_group.allow_ssh",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:584871003262:internet-gateway/igw-086f131a1804e2303",
            "id": "igw-086f131a1804e2303",
            "owner_id": "584871003262",
            "tags": {
              "Name": "termite-cloud-infrastructure"
            },
            "tags_all": {
              "Name": "termite-cloud-infrastructure"
            },
            "vpc_id": "vpc-0ef7286aacd42efbb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:584871003262:network-interface/eni-006f5682264cf7a4b",
            "attachment": [
              {
                "attachment_id": "eni-attach-0b6f0faba5e680213",
                "device_index": 0,
                "instance": "i-0eee89cbb277a2bf4"
              }
            ],
            "id": "eni-006f5682264cf7a4b",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:45:09:0e:a6:4a",
            "owner_id": "584871003262",
            "private_ip": "172.16.10.100",
            "private_ip_list": [
              "172.16.10.100"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.16.10.100"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-09ff6131adb35a694"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a3b7e2bbd62f056d",
            "tags": {
              "Name": "termite-cloud-infrastructure"
            },
            "tags_all": {
              "Name": "termite-cloud-infrastructure"
            }
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:584871003262:route-table/rtb-057cdc20e1f28086f",
            "id": "rtb-057cdc20e1f28086f",
            "owner_id": "584871003262",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-086f131a1804e2303",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "termite-cloud-infrastructure"
            },
            "tags_all": {
              "Name": "termite-cloud-infrastructure"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ef7286aacd42efbb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tch_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0409bd99c1750f581",
            "route_table_id": "rtb-057cdc20e1f28086f",
            "subnet_id": "subnet-0a3b7e2bbd62f056d"
          },
          "dependencies": [
            "aws_route_table.main_rt",
            "aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:584871003262:security-group/sg-09ff6131adb35a694",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09ff6131adb35a694",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "584871003262",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ef7286aacd42efbb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:584871003262:subnet/subnet-0a3b7e2bbd62f056d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.16.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3b7e2bbd62f056d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "584871003262",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "termite-cloud-infrastructure"
            },
            "tags_all": {
              "Name": "termite-cloud-infrastructure"
            },
            "vpc_id": "vpc-0ef7286aacd42efbb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:584871003262:vpc/vpc-0ef7286aacd42efbb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0ec1887dd80221178",
            "default_route_table_id": "rtb-0ffbe7986eb0dba7d",
            "default_security_group_id": "sg-0ad66926b54310241",
            "dhcp_options_id": "dopt-0d918768184a27df4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ef7286aacd42efbb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ffbe7986eb0dba7d",
            "owner_id": "584871003262",
            "tags": {
              "Name": "termite-cloud-infrastructure"
            },
            "tags_all": {
              "Name": "termite-cloud-infrastructure"
            }
          }
        }
      ]
    }
  ]
}